commands for status and display

--- a/doc/protocol.tex
+++ b/doc/protocol.tex
@@ -71,20 +71,20 @@ Acceleration &
 Beep &
     0x07 &
     Bufferno &
-    Offset &
-     &
-     &
-     &
-     &
+    - &
+    - &
+    - &
+    - &
+    - &
     crc8 \\
 RequestData &
     0x08 &
     Bufferno &
-     &
-     &
-     &
-     &
-     &
+    - &
+    - &
+    - &
+    - &
+    - &
     crc8 \\
 WriteData &
     0x09 &
@@ -98,29 +98,29 @@ WriteData &
 HandleRequestedData &
     0x0A &
     Bufferno &
-    Offset &
+    Data &
     Data &
     Data &
     Data &
     Data &
     crc8 \\
- &
-    0x &
-     &
-     &
-     &
-     &
-     &
-     &
+Status &
+    0x0B &
+    voltagehigh &
+    voltagelow &
+    currenthigh &
+    currentlow &
+    status &
+    Buffer &
     crc8 \\
- &
-    0x &
-     &
-     &
-     &
-     &
-     &
-     &
+Display &
+    0x0C &
+    Bufferno &
+    Data &
+    Data &
+    Data &
+    Data &
+    Data &
     crc8 \\
  &
     0x &
