--- a/doc/protocol.tex
+++ b/doc/protocol.tex
@@ -7,7 +7,7 @@
 
 TODO: all cmds have now 12 bytes
 
-\begin{tabular}{lllllllll}
+\begin{tabular}{lllllllllllll}
 Command &
     Byte 0 &
     Byte 1 &
