Sending Voltage, current and charge status

--- a/doc/overview.tex
+++ b/doc/overview.tex
@@ -150,9 +150,9 @@ Status &
     voltagelow &
     currenthigh &
     currentlow &
-    status &
-    Buffer &
-    - &
+    chargestatushigh &
+    chargestatuslow &
+    switch &
     - &
     - &
     - &
@@ -170,14 +170,14 @@ Display &
     - &
     - &
     crc8 \\
- &
-    0x &
-     &
-     &
-     &
-     &
-     &
-     &
+Ressource &
+    0x0D &
+    usedSpace &
+    usedPages &
+    freePages &
+    PAGESIZE &
+    usedReceiveBuffer &
+    freeReceiveBuffer &
      &
      &
      &
